<resources>
    <string name="app_name">SmartExchange</string>
    <string name="title_activity_main">SmartExchange</string>

    <string name="label_contract_deployed">Contract deployed to the network in transaction:</string>
    <string name="text_tx_hash">Transaction hash will appear here.</string>
    <string name="text_tx_hyperlink">Hyperlink will appear here.</string>
    <string name="label_current_balance">Your current balance is:</string>
    <string name="hint_destination_eth">Destination kETH address</string>
    <string name="label_qr">QR</string>
    <string name="hint_amount_btc">Amount to monitor (in BTC)</string>
    <string name="hint_address_btc">Bitcoin address to monitor</string>
    <string name="label_validate">Validate</string>
    <string name="label_are_you_sure">Are you sure you want to transfer</string>
    <string name="dummy_eth_balance">0.0 kETH</string>
    <string name="label_to_address">to address:</string>
    <string name="dummy_eth_address">0x0000000000000000000000000000000000000000</string>
    <string name="label_with_condition">with condition, that</string>
    <string name="dummy_btc_amount">0.00 BTC</string>
    <string name="label_will_be_transferred">will be transferred to:</string>
    <string name="dummy_btc_address">2N000000000000000000000000000000000</string>
    <string name="label_gas_price">Gas Price</string>
    <string name="dummy_gas_price">30 GWei</string>
    <string name="label_gas_limit">Gas Limit</string>
    <string name="dummy_gas_limit">30 000 000</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="label_import_wallet">or Import own Wallet</string>
    <string name="label_transfer_ether_start">You can transfer Ether to this address to start:</string>
    <string name="label_continue">Continue</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_nickname">Nickname (optional)</string>
    <string name="hint_btc_sell">BTC to sell</string>
    <string name="hint_eth_buy">ETH to buy</string>
    <string name="hint_eth_address">ETH address</string>
    <string name="label_create_btc_offer">Create new BTC offer</string>
    <string name="label_create_offer">Create new offer</string>
    <string name="label_delete_offer">Delete offer</string>
    <string name="label_offer_status">The current status of your offer is:</string>
    <string name="text_status_sent">The offer has been published.</string>
    <string name="text_status_conf1">Someone accepted your offer. Please confirm.</string>
    <string name="text_status_conf2">You confirmed. Waiting for their response.</string>
    <string name="text_status_accepted">The offer has been accepted. Please verify the contract here:</string>
    <string name="label_units_btc">BTC</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_new">New</string>
    <string name="label_eth_amount">ETH amount</string>
    <string name="label_btc_amount">BTC amount</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_no_offers">Unfortunately, there are no available offers at the moment.</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_offers">BTC Sell - offers</string>
    <string name="text_status_link_error">Error fetching link.</string>

</resources>
