<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CreateOfferFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/labelCreateOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/label_create_btc_offer"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputOfferNickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_nickname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/labelCreateOffer" />

        <EditText
            android:id="@+id/inputOfferBtc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_btc_sell"
            android:inputType="number|numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/inputOfferNickname" />

        <EditText
            android:id="@+id/inputOfferEth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_eth_buy"
            android:inputType="number|numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/inputOfferBtc" />

        <EditText
            android:id="@+id/inputOfferEthAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_eth_address"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/buttonOfferQr"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/inputOfferEth" />

        <Button
            android:id="@+id/buttonOfferQr"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_qr"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/inputOfferEth" />

        <Button
            android:id="@+id/buttonCreateOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/label_create_offer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputOfferEthAddress" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>