<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.DeployContract">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/labelCurrentbalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_current_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelCurrentbalance">

            <TextView
                android:id="@+id/ethBallanceCurrent"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="0.00 kETH"
                android:textAlignment="center"
                tools:text="1.23 kETH" />

            <ImageButton
                android:id="@+id/refreshBalanceButton"
                android:layout_width="39dp"
                android:layout_height="35dp"

                android:layout_weight="1"
                android:src="@android:drawable/ic_popup_sync" />
        </LinearLayout>

        <EditText
            android:id="@+id/inputEthAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_destination_eth"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/buttonQrEth"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/buttonQrEth"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_qr"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/inputBtcAmount"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_amount_btc"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/inputEthAddress" />

        <EditText
            android:id="@+id/inputBtcAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_address_btc"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/buttonQrBtc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/inputBtcAmount" />

        <Button
            android:id="@+id/buttonQrBtc"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_qr"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/inputBtcAmount" />

        <Button
            android:id="@+id/button_validate_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_validate"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputBtcAddress" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>